# waybap

./: Cargo.toml  LICENSE  README.md  flake.nix  hmModule.nix
.claude/: CLAUDE.md
.github/: README.md
docs/: open-meteo-spec.md
docs/specs/: ai-usage.md  open-meteo.md
src/: main.rs  pango.rs  scheduler.rs  server.rs
src/crypto/: mod.rs  parsing.rs  query.rs
src/sensors/: mod.rs  parsing.rs  query.rs
src/usage/: parsing.rs  query.rs
src/weather/: constants.rs  mod.rs  parsing.rs  query.rs  utils.rs
