[package]
name = "waybar-data-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", default-features = false, features = ["clock"] }
reqwest = { version = "0.12.3", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tiny_http = "0.12.0"
