[package]
name = "waybar-data-provider"
version = "0.1.0"
edition = "2021"
authors = [ "kittyandrew <andrew@kittymail.me>" ]

# I have no clue what any of this does:
[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"

[dependencies]
chrono = { version = "0.4.37", default-features = false, features = ["clock"] }
reqwest = { version = "0.12.3", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.115"
tiny_http = "0.12.0"
